--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3318,7 +3318,6 @@
       <notes>
         <note category="german">Kopieren</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Kopieren</source>
@@ -3327,9 +3326,8 @@
     </unit>
     <unit id="rJ6n7d_" name="E-Mail konnte nicht gesendet werden.">
       <notes>
-        <note category="german">The E-Mail cannot be sent.</note>
+        <note category="german">E-Mail konnte nicht gesendet werden.</note>
         <note category="from">twig:///templates/scripts/errors/generic.txt.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>E-Mail konnte nicht gesendet werden.</source>
