--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9496,7 +9496,7 @@
       </notes>
       <segment>
         <source>Du stellst den(die) {item} bei dir daheim auf. Zugegeben, es sieht nicht gerade ästhetisch aus, aber mal ganz ehrlich: Wen kümmert das?{hr}Dieser Gegenstand erweitert deine Truhe dauerhaft um soviele freie Plätze: &lt;strong&gt;{home_storage}&lt;/strong&gt;.</source>
-        <target><![CDATA[Du stellst den(die) {item} bei dir daheim auf. Zugegeben, es sieht nicht gerade ästhetisch aus, aber mal ganz ehrlich: Wen kümmert das?{hr}Dieser Gegenstand erweitert deine Truhe dauerhaft um soviele freie Plätze: <strong>{home_storage}</strong>.]]></target>
+        <target><![CDATA[Instalas {item} en tu casa. No se ve muy bien. Pero francamente... ¿a quién le importa?{hr}Este objeto te permite agregar definitivamente <strong>{home_storage} compartimento(s)</strong> a tu baúl.]]></target>
       </segment>
     </unit>
     <unit id="Oww.AzB">
