Fix German translation

--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5654,7 +5654,7 @@
                 other {# Pkte. Angriff}
               }
             }
-            other {# pkt attacke}
+            other {{watchpoint__copy} pkt attacke}
           }
         </target>
       </segment>
