ES Log when you use a smoke bomb

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22670,7 +22670,7 @@
       </notes>
       <segment>
         <source>Es wurde eine Rauchbombe eingesetzt!</source>
-        <target>Es wurde eine Rauchbombe eingesetzt!</target>
+        <target>¡Una bomba de gas ha sido lanzada!</target>
       </segment>
     </unit>
     <unit id="gDPIj.n" name="Ein neuer Bürger ist in der Stadt angekommen: {citizen} ({profession}).">
