--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -8578,7 +8578,7 @@
       </notes>
       <segment>
         <source>Du hast {count} Aktionspunkt(e) benutzt.</source>
-        <target>{raw_count, plural,  one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
+        <target>{raw_count, plural,  one {Vous avez utilisé {count} point d'action.} other {Vous avez utilisé {count} points d'action.}}</target>
       </segment>
     </unit>
     <unit id="KYKuCCa">
@@ -17463,7 +17463,7 @@
       </notes>
       <segment>
         <source>Du hast dafür {count} Aktionspunkt(e) verbraucht.</source>
-        <target>{raw_count, plural, one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
+        <target>{raw_count, plural, one {Vous avez utilisé {count} point d'action.} other {Vous avez utilisé {count} points d'action.}}</target>
       </segment>
     </unit>
     <unit id="tTMCru5">
@@ -21389,7 +21389,7 @@
       </notes>
       <segment>
         <source>Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</source>
-        <target>Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</target>
+        <target>Il n'y a rien à transformer dans la Banque de la ville pour le moment...</target>
       </segment>
     </unit>
     <unit id="gLXdI1z" name="Diskussionen im Werkstatt-Forum">
