--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -1996,7 +1996,7 @@
       </notes>
       <segment>
         <source>Batteriewerfer Mark II (geladen)</source>
-        <target>Battery Laucher Mk. II (loaded)</target>
+        <target>Battery Launcher Mk. II (loaded)</target>
       </segment>
     </unit>
     <unit id="DrdIvIa" name="Zerquetschte Batterie">
@@ -3513,7 +3513,7 @@
       </notes>
       <segment>
         <source>&lt;nt-spawned&gt;Trotz aller Anstrengungen ist es dir nicht gelungen, den {item} zu öffnen...&lt;/nt-spawned&gt;&lt;t-spawned&gt;Du hast die {item} geöffnet und darin {items_spawn} gefunden!&lt;/t-spawned&gt;</source>
-        <target><![CDATA[<nt-spawned>You waste precious time looking for the combination to the {item}...</nt-spawned><t-spawned>Nice one! You have found the secret combination for the {item}! The code was 4715... You find the {items_spawn} inside.</t-spawned>]]></target>
+        <target><![CDATA[<nt-spawned>You waste precious time looking for the combination to the {item}.<hr />You have used <strong>1 action point</strong>.</nt-spawned><t-spawned>Nice one! You have found the secret combination for the {item}! The code was 4715... You find the {items_spawn} inside.<hr />You have used <strong>1 action point</strong>.</t-spawned>]]></target>
       </segment>
     </unit>
     <unit id="ANXSLZW" name="Laden">
@@ -7851,7 +7851,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Du befestigst den {item} und bedeckst ihn zur Tarnung mit herumliegendem Müll und vertrockneten Zweigen. Na bitte, das sollte hoffentlich deine Überlebenschancen heute Nacht verbessern. Du hast dafür 1 Aktionspunkt verbraucht.</source>
-        <target><![CDATA[You install the {item}  then place some rubbish and dried branches over it for camouflage. There you go, that should hopefully improve your chances of making it through the night.{hr}You have used <strong>1 action point</strong>.]]></target>
+        <target><![CDATA[You install the {item} then place some rubbish and dried branches over it for camouflage. There you go, that should hopefully improve your chances of making it through the night.{hr}You have used <strong>1 action point</strong>.]]></target>
       </segment>
     </unit>
     <unit id="68c4rQB">
@@ -9100,7 +9100,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Du hast ein(e) {item_from} geöffnet und darin folgenden Gegenstand gefunden: {items_spawn}.{hr}Die Kiste ist nicht leer...</source>
-        <target>You have opened the {item_from}, you have found the {items_spawn} inside.{hr}The box is not empty...</target>
+        <target>You unpack the {item_from} and you find the {items_spawn}.{hr}The box is not empty...</target>
       </segment>
     </unit>
     <unit id="Np_I24h">
@@ -9110,7 +9110,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Du hast ein(e) {item_from} geöffnet und darin folgenden Gegenstand gefunden: {items_spawn}.{hr}{item_from} ist &lt;strong&gt;leer&lt;/strong&gt;.</source>
-        <target><![CDATA[You have opened the {item_from}, you have found the {items_spawn} inside.{hr}{item_from} is <strong>empty</strong>.]]></target>
+        <target><![CDATA[You unpack the {item_from} and you find the {items_spawn}.{hr}{item_from} is <strong>empty</strong>.]]></target>
       </segment>
     </unit>
     <unit id="dvSEUyn">
